css/main.css
html {
  box-sizing: border-box;
  font-family: "Lato", sans-serif;
  line-height: 1.5;
  background-color: #f2f2f2;
}


*, *::before, *::after {
  box-sizing: inherit;
}

span {
  color: #333;
}

div a {
  border: 3px solid #333;
  text-decoration: none;
  padding: 0.4em 0.75em 0.5em;
  color: #333;
  border-radius: 8px;
  margin: 1.5rem;
}

img {
  max-width: 25em;
}

